[package]
name = "robonomics-pair"
description = "Robonomics peer pairing operations."
version = "0.1.0"
authors = ["Airalab <research@aira.life>"]
edition = "2021"

[dependencies]
robonomics-protocol = { path = "../protocol" }
#ipfs-api = { version = "0.10.0", features = ["with-hyper-rustls"], default-features = false }
async-std = "1.9"
futures-timer = "3.0.2"
derive_more = "0.99.11"
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23" }
futures = "0.3.15"
sds011 = "0.2.1"
serde = "1.0.130"
log = "0.4.11"

bincode = "1.3.3"
chrono = "0.4"
libp2p = " 0.40"
rust-base58  = "0.0.4"
env_logger = "0.6.0"
structopt = "0.3.26"
#clap = "3.0"
#clap = { version = "3.0", features = ["derive"], optional = true }
clap = { version = "3.2.5", features = ["derive"] }