
[package]
name = "robonomics-protocol"
description = "Robonomics Network protocol library."
version = "0.12.0"
authors = ["Airalab <research@aira.life>"]
edition = "2018"

[dependencies]
robonomics-primitives = { path = "../primitives" }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
codec = { package = "parity-scale-codec", version = "2.3", features = ["derive"] }
async-trait = "0.1.30"
derive_more = "0.99.11"
futures-timer = "3.0.2"
# subxt = "0.17.0"
substrate-frame-rpc-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16"}
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
libp2p = "0.40.0"
libp2p-swarm = "0.31.0"
futures = "0.3.15"
bincode = "1.3.1"
log = "0.4.11"
jsonrpc-core = "18.0.0"
jsonrpc-derive = "18.0.0"
jsonrpc-pubsub = "18.0.0"
jsonrpc-core-client = "18.0.0"
sc-rpc-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
rand = "0.8.4"
rustc-hex = "2.1.0"
rust-base58  = "0.0.4"
chrono = "0.4"
parity-scale-codec = "3.0.0"
parity-scale-codec-derive = "3.0.0"
