[package]
name = "robonomics-protocol"
description = "Robonomics Network protocol library."
version = "0.15.0"
authors = ["Airalab <research@aira.life>"]
edition = "2021"

[dependencies]
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
codec = { package = "parity-scale-codec", version = "3.0", features = [
  "derive",
] }
async-trait = "0.1.30"
derive_more = "0.99.11"
futures-timer = "3.0.2"
subxt = "0.22.0"
sp-runtime = "6.0.0"
sp-core = "6.0.0"
futures = "0.3.15"
bincode = "1.3.1"
log = "0.4.11"
jsonrpsee = { version = "0.14.0", features = ["server"] }
rand = "0.8.4"
rust-base58 = "0.0.4"
chrono = "0.4"
libp2p = { version = "0.49", features = [
    "gossipsub",
    "kad",
    "mdns",
    "request-response",
    "noise",
    "tcp",
    "yamux",
    "websocket",
    "mplex",
    "dns",
    "tokio",
    "rsa",
] }

tokio = { version = "1", features = ["full"] }

