[package]
name = "robonomics-protocol"
description = "Robonomics Network protocol library."
version = "0.15.0"
authors = ["Airalab <research@aira.life>"]
edition = "2021"

[dependencies]
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.95"
codec = { package = "parity-scale-codec", version = "3.4", features = [
  "derive",
] }
async-trait = "0.1.68"
derive_more = "0.99.17"
futures-timer = "3.0.2"
subxt = "0.27.1"
sp-runtime = "22.0.0"
sp-core = "19.0.0"
futures = "0.3.27"
bincode = "1.3.3"
log = "0.4.17"
jsonrpsee = { version = "0.16.2", features = ["server"] }
rand = "0.8.5"
rust-base58 = "0.0.4"
chrono = "0.4"
libp2p = { version = "0.51", features = [
    "gossipsub",
    "kad",
    "mdns",
    "request-response",
    "macros",
    "noise",
    "tcp",
    "yamux",
    "websocket",
    "mplex",
    "dns",
    "tokio",
    "rsa",
] }

tokio = { version = "1", features = ["full"] }

