[package]
name = "ros-integration"
version = "0.1.0"
authors = ["Airalab <research@aira.life>"]
edition = "2018"

[dependencies]
log = "0.4"
hex-literal = "0.1"
futures = "0.1"
rosrust = "0.7.1"
rosbag = "0.2.0"
robonomics-runtime = { path = "../runtime" }
sr-io = { git = "https://github.com/paritytech/substrate" }
sr-primitives = { git = "https://github.com/paritytech/substrate" }
substrate-client = { git = "https://github.com/paritytech/substrate", default-features = false }
substrate-network = { git = "https://github.com/paritytech/substrate" }
substrate-keystore = { git = "https://github.com/paritytech/substrate" }
substrate-primitives = { git = "https://github.com/paritytech/substrate" }
substrate-transaction-pool = { git = "https://github.com/paritytech/substrate" }
