[package]
name = "robonomics-runtime"
version = "0.3.2"
authors = ["Airalab <research@aira.life>"]

[dependencies]
rustc-hex = "1.0"
hex-literal = "0.1.0"
serde = { version = "1.0", default-features = false }
serde_derive = { version = "1.0", optional = true }
safe-mix = { version = "1.0", default-features = false }
parity-codec = "2.0"
parity-codec-derive = "2.0"
sr-io = { git = "https://github.com/paritytech/substrate" }
sr-std = { git = "https://github.com/paritytech/substrate" }
sr-version = { git = "https://github.com/paritytech/substrate" }
sr-primitives = { git = "https://github.com/paritytech/substrate" }
srml-aura = { git = "https://github.com/paritytech/substrate" }
srml-system = { git = "https://github.com/paritytech/substrate" }
srml-support = { git = "https://github.com/paritytech/substrate" }
srml-indices = { git = "https://github.com/paritytech/substrate" }
srml-balances = { git = "https://github.com/paritytech/substrate" }
srml-consensus = { git = "https://github.com/paritytech/substrate" }
srml-executive = { git = "https://github.com/paritytech/substrate" }
srml-timestamp = { git = "https://github.com/paritytech/substrate" }
srml-upgrade-key = { git = "https://github.com/paritytech/substrate" }
substrate-client = { git = "https://github.com/paritytech/substrate", optional = true }
substrate-keyring = { git = "https://github.com/paritytech/substrate" }
substrate-primitives = { git = "https://github.com/paritytech/substrate" }
substrate-consensus-aura-primitives = { git = "https://github.com/paritytech/substrate" }

[features]
default = ["std"]
std = [
	"safe-mix/std",
	"parity-codec/std",
	"serde/std",
	"serde_derive",
	"sr-io/std",
	"sr-std/std",
	"sr-version/std",
	"sr-primitives/std",
	"srml-aura/std",
	"srml-system/std",
	"srml-support/std",
    "srml-indices/std",
	"srml-balances/std",
	"srml-executive/std",
	"srml-timestamp/std",
	"srml-upgrade-key/std",
	"substrate-client",
	"substrate-client/std",
	"substrate-primitives/std",
	"substrate-consensus-aura-primitives/std",
]
