[package]
name = "robonomics-runtime"
version = "0.10.1"
authors = ["Airalab <research@aira.life>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", optional = true }
serde_derive = { version = "1.0", optional = true }
parity-codec = { version = "3.5", default-features = false, features = ["derive"] }
rstd = { package = "sr-std", git = "https://github.com/paritytech/substrate", default-features = false }
client = { package = "substrate-client", git = "https://github.com/paritytech/substrate", default-features = false }
version = { package = "sr-version", git = "https://github.com/paritytech/substrate", default-features = false }
consensus_aura = { package = "substrate-consensus-aura-primitives", git = "https://github.com/paritytech/substrate", default-features = false }
consensus_authorities = { package = "substrate-consensus-authorities", git = "https://github.com/paritytech/substrate", default-features = false }
runtime_primitives = { package = "sr-primitives", git = "https://github.com/paritytech/substrate", default-features = false }
offchain_primitives = { package = "substrate-offchain-primitives", git = "https://github.com/paritytech/substrate", default-features = false }
primitives = { package = "substrate-primitives", git = "https://github.com/paritytech/substrate", default-features = false }
executive = { package = "srml-executive", git = "https://github.com/paritytech/substrate", default-features = false }
support = { package = "srml-support", git = "https://github.com/paritytech/substrate", default-features = false }
aura = { package = "srml-aura", git = "https://github.com/paritytech/substrate", default-features = false }
system = { package = "srml-system", git = "https://github.com/paritytech/substrate", default-features = false }
timestamp = { package = "srml-timestamp", git = "https://github.com/paritytech/substrate", default-features = false }
consensus = { package = "srml-consensus", git = "https://github.com/paritytech/substrate", default-features = false }
indices = { package = "srml-indices", git = "https://github.com/paritytech/substrate", default-features = false }
balances = { package = "srml-balances", git = "https://github.com/paritytech/substrate", default-features = false }
finality_tracker = { package = "srml-finality-tracker", git = "https://github.com/paritytech/substrate", default-features = false }
grandpa = { package = "srml-grandpa", git = "https://github.com/paritytech/substrate", default-features = false }
session = { package = "srml-session", git = "https://github.com/paritytech/substrate", default-features = false }
staking = { package = "srml-staking", git = "https://github.com/paritytech/substrate", default-features = false }
sudo = { package = "srml-sudo", git = "https://github.com/paritytech/substrate", default-features = false }

[features]
default = ["std"]
std = [
	"serde",
    "serde_derive",
	"parity-codec/std",
	"rstd/std",
	"client/std",
	"version/std",
	"consensus_aura/std",
    "consensus_authorities/std",
	"runtime_primitives/std",
    "offchain_primitives/std",
	"primitives/std",
	"executive/std",
	"support/std",
	"aura/std",
	"system/std",
	"timestamp/std",
    "consensus/std",
    "indices/std",
	"balances/std",
    "finality_tracker/std",
    "grandpa/std",
    "session/std",
    "staking/std",
	"sudo/std",
]
