[package]
name = "robonomics-runtime"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
build = "build.rs"

[dependencies]
# third-party dependencies
parity-scale-codec.workspace = true
smallvec.workspace = true
scale-info.workspace = true
hex-literal.workspace = true
serde_json = { features = ["alloc"], workspace = true }

# primitives
sp-api.workspace = true
sp-block-builder.workspace = true
sp-core.workspace = true
sp-inherents.workspace = true
sp-offchain.workspace = true
sp-runtime.workspace = true
sp-session.workspace = true
sp-staking.workspace = true
sp-std.workspace = true
sp-transaction-pool.workspace = true
sp-version.workspace = true
sp-genesis-builder.workspace = true
sp-consensus-aura.workspace = true
sp-keyring.workspace = true

# standard dependencies
pallet-assets.workspace = true
pallet-aura.workspace = true
pallet-authorship.workspace = true
pallet-balances.workspace = true
pallet-collator-selection.workspace = true
pallet-collective.workspace = true
pallet-democracy.workspace = true
frame-executive.workspace = true
pallet-identity.workspace = true
pallet-scheduler.workspace = true
pallet-session.workspace = true
pallet-treasury.workspace = true
pallet-membership.workspace = true
frame-support.workspace = true
pallet-multisig.workspace = true
pallet-preimage.workspace = true
frame-benchmarking = { workspace = true, optional = true }
frame-system.workspace = true
frame-system-rpc-runtime-api.workspace = true
frame-system-benchmarking = { workspace = true, optional = true }
pallet-utility.workspace = true
pallet-vesting.workspace = true
pallet-timestamp.workspace = true
pallet-transaction-payment.workspace = true
pallet-transaction-payment-rpc-runtime-api.workspace = true
pallet-sudo.workspace = true

# robonomics dependencies
pallet-robonomics-datalog = { path = "../frame/datalog", default-features = false }
pallet-robonomics-digital-twin = { path = "../frame/digital-twin", default-features = false }
pallet-robonomics-launch = { path = "../frame/launch", default-features = false }
pallet-robonomics-liability = { path = "../frame/liability", default-features = false }
pallet-robonomics-lighthouse = { path = "../frame/lighthouse", default-features = false }
pallet-robonomics-rws = { path = "../frame/rws", default-features = false }

# cumulus dependencies
cumulus-pallet-aura-ext.workspace = true
cumulus-pallet-parachain-system.workspace = true
cumulus-pallet-dmp-queue.workspace = true
cumulus-pallet-xcmp-queue.workspace = true
cumulus-pallet-xcm.workspace = true
cumulus-pallet-weight-reclaim.workspace = true
cumulus-primitives-aura.workspace = true
cumulus-primitives-core.workspace = true
cumulus-primitives-utility.workspace = true
cumulus-primitives-timestamp.workspace = true
parachain-info.workspace = true

# polkadot dependencies
xcm.workspace = true
xcm-builder.workspace = true
xcm-executor.workspace = true
pallet-xcm.workspace = true
pallet-xcm-info = { path = "../frame/xcm-info", default-features = false }
polkadot-parachain.workspace = true
polkadot-primitives.workspace = true

[build-dependencies]
substrate-wasm-builder = { workspace = true, optional = true }

[features]
default = ["std"]
with-tracing = ["frame-executive/with-tracing"]
std = [
  "substrate-wasm-builder",
  "parity-scale-codec/std",
  "sp-api/std",
  "sp-block-builder/std",
  "sp-genesis-builder/std",
  "sp-core/std",
  "sp-inherents/std",
  "sp-offchain/std",
  "sp-runtime/std",
  "sp-std/std",
  "sp-session/std",
  "sp-staking/std",
  "sp-transaction-pool/std",
  "sp-keyring/std",
  "sp-version/std",
  "pallet-aura/std",
  "pallet-authorship/std",
  "pallet-assets/std",
  "pallet-balances/std",
  "pallet-collective/std",
  "pallet-collator-selection/std",
  "pallet-democracy/std",
  "frame-executive/std",
  "pallet-identity/std",
  "pallet-scheduler/std",
  "pallet-session/std",
  "pallet-treasury/std",
  "pallet-membership/std",
  "pallet-multisig/std",
  "pallet-preimage/std",
  "frame-support/std",
  "frame-system/std",
  "frame-system-rpc-runtime-api/std",
  "pallet-utility/std",
  "pallet-vesting/std",
  "pallet-timestamp/std",
  "pallet-transaction-payment/std",
  "pallet-transaction-payment-rpc-runtime-api/std",
  "pallet-robonomics-datalog/std",
  "pallet-robonomics-digital-twin/std",
  "pallet-robonomics-launch/std",
  "pallet-robonomics-liability/std",
  "pallet-robonomics-lighthouse/std",
  "pallet-robonomics-rws/std",
  "pallet-sudo/std",
  "cumulus-pallet-aura-ext/std",
  "cumulus-pallet-parachain-system/std",
  "cumulus-primitives-aura/std",
  "cumulus-primitives-core/std",
  "cumulus-primitives-utility/std",
  "cumulus-primitives-timestamp/std",
  "cumulus-pallet-dmp-queue/std",
  "cumulus-pallet-xcmp-queue/std",
  "cumulus-pallet-xcm/std",
  "xcm/std",
  "xcm-builder/std",
  "xcm-executor/std",
  "pallet-xcm/std",
  "pallet-xcm-info/std",
  "polkadot-parachain/std",
  "polkadot-primitives/std",
  "parachain-info/std",
  "scale-info/std",
]
runtime-benchmarks = [
  "frame-benchmarking",
  "frame-support/runtime-benchmarks",
  "frame-system-benchmarking/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
  "sp-runtime/runtime-benchmarks",
  "pallet-balances/runtime-benchmarks",
  "pallet-collective/runtime-benchmarks",
  "pallet-timestamp/runtime-benchmarks",
  "pallet-robonomics-launch/runtime-benchmarks",
  "pallet-robonomics-datalog/runtime-benchmarks",
  "pallet-xcm/runtime-benchmarks",
  "xcm-builder/runtime-benchmarks",
  "frame-system-benchmarking",
]

# Enable the metadata hash generation in the wasm builder.
metadata-hash = ["substrate-wasm-builder/metadata-hash"]

# A feature that should be enabled when the runtime should be built for on-chain
# deployment. This will disable stuff that shouldn't be part of the on-chain wasm
# to make it smaller, like logging for example.
on-chain-release-build = ["metadata-hash"]
