[package]
name = "robonomics-service"
version = "2.6.1"
authors = ["Airalab <research@aira.life>"]
description = "Robonomics node console line interface."
build = "build.rs"
edition = "2021"
license = "Apache-2.0"
homepage = "https://robonomics.network"
repository = "https://github.com/airalab/robonomics"

[dependencies]
# third-party dependencies
clap = { version = "3.0", features = ["derive"], optional = true }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0"
jsonrpsee = { version = "0.15.1", features = ["server"] }
codec = { package = "parity-scale-codec", version = "3.0.0" }
hex-literal = "0.3.1"
log = "0.4.17"
libp2p = { version = "0.49", optional = true }

# primitives
robonomics-primitives = { path = "../primitives", default-features = false }
robonomics-protocol = { path = "../protocol", optional = true }
sp-authority-discovery = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
sp-authorship = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
sp-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
sp-session = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
sp-offchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
sp-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
sp-trie = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
sp-transaction-storage-proof = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
sp-version = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
sp-externalities = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
sp-tasks = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }

# client dependencies
sc-basic-authorship = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
sc-chain-spec = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
sc-client-db = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
sc-consensus-aura = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
sc-consensus-slots = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
sc-consensus-uncles = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
sc-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
sc-informant = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
sc-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
sc-network = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
sc-offchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
sc-service = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28", default-features = false }
sc-tracing = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
sc-telemetry = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
sc-sync-state-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
sc-executor-common = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }

# frame dependencies
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28", optional = true }
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
pallet-staking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
pallet-robonomics-lighthouse = { path = "../frame/lighthouse", optional = true }
pallet-robonomics-datalog = { path = "../frame/datalog", default-features = false }

# cumulus dependencies
cumulus-primitives-core = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.28", optional = true }
cumulus-primitives-parachain-inherent = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.28", optional = true }
cumulus-client-consensus-aura = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.28", optional = true }
cumulus-client-consensus-common = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.28", optional = true }
cumulus-client-consensus-relay-chain = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.28", optional = true }
cumulus-relay-chain-interface = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.28", optional = true }
cumulus-relay-chain-rpc-interface = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.28", optional = true }
cumulus-relay-chain-inprocess-interface = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.28", optional = true }
cumulus-client-cli = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.28", optional = true }
cumulus-client-collator = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.28", optional = true }
cumulus-client-network = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.28", optional = true }
cumulus-client-service = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.28", optional = true }

# polkadot dependencies
polkadot-primitives = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.28", optional = true }
polkadot-parachain = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.28", optional = true }
polkadot-service = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.28", optional = true }
polkadot-cli = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.28", optional = true }

# node-specific dependencies
robonomics-rpc = { path = "../rpc", optional = true }
local-runtime = { path = "../runtime/local", optional = true }
alpha-runtime = { path = "../runtime/alpha", optional = true }
ipci-runtime = { path = "../runtime/ipci", optional = true }
main-runtime = { path = "../runtime/main", optional = true }
sc-executor = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
sc-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }

# CLI-specific dependencies
sc-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28", optional = true }
frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28", optional = true }
substrate-prometheus-endpoint = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28", optional = true }

# Robonomics-specific dependencies
#robonomics-cli = { path = "../../../cli", optional = true }
robonomics-pair  = { path = "../pair", optional = true }

[build-dependencies]
local-runtime = { path = "../runtime/local", optional = true }
sc-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28", optional = true }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28", optional = true }
polkadot-cli = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.28", optional = true }
frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28", optional = true }
cumulus-client-cli = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.28", optional = true }
substrate-build-script-utils = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
#robonomics-cli = { path = "../../../cli", optional = true }
robonomics-pair  = { path = "../pair", optional = true }
vergen = { version = "3.1.0", optional = true }
clap = { version = "3.0", features = ["derive"], optional = true }
clap_complete = { version = "3.0", optional = true }

[features]
## Build fully functional node by default.
default = ["full"]

## Fully functional Robonomics Network node.
# Full node required for collating / validating the parachain or develop Robonomics pallets.
full = [
  "sc-cli",
  "sp-core",
  "vergen",
  "clap",
  "clap_complete",
  "local-runtime",
  "sc-service/rocksdb",
  "robonomics-rpc",
  "robonomics-protocol",
  "frame-benchmarking",
  "cumulus-client-cli",
  "robonomics-pair",
  #    "robonomics-cli",
  "libp2p",
]

## Ultra lightweight Robonomics Network node.
# Stateless node consumes a minimum of resources and suits for small embedded devices.
zero = [
  "sc-cli",
  "sp-core",
  "vergen",
  "clap",
  "clap_complete",
  "cumulus-client-cli",
  "robonomics-pair",
  #    "robonomics-cli",
]

# Discovery service
discovery = [
    "sc-cli",
    "clap",
    "clap_complete",
    "robonomics-protocol",
    "libp2p",
]

## Enable Kusama parachain.
kusama = ["main-runtime", "parachain"]

## Enable parachain collator.
parachain = [
  "alpha-runtime",
  "ipci-runtime",
  "pallet-robonomics-lighthouse",
  "substrate-frame-rpc-system",
  "cumulus-primitives-core",
  "cumulus-primitives-parachain-inherent",
  "cumulus-client-consensus-aura",
  "cumulus-client-consensus-common",
  "cumulus-client-consensus-relay-chain",
  "cumulus-relay-chain-interface",
  "cumulus-relay-chain-rpc-interface",
  "cumulus-relay-chain-inprocess-interface",
  "cumulus-client-collator",
  "cumulus-client-network",
  "cumulus-client-service",
  "polkadot-primitives",
  "polkadot-parachain",
  "polkadot-service",
  "polkadot-cli",
  "full",
]

## Enable Wasmtime for runtime execution.
wasmtime = ["sc-service/wasmtime", "sc-cli/wasmtime"]

## Enable ROS integration: exports to ROS topics and services for Robonomics communication.
# To build with it install ROS (http://wiki.ros.org/melodic/Installation) before.
# It also require roscore service to be launched.
ros = []

## Enable runtime benchmarking.
runtime-benchmarks = [
  "local-runtime/runtime-benchmarks",
  "cumulus-client-cli",
  "frame-benchmarking-cli",
  "frame-benchmarking",
  "pallet-robonomics-datalog/runtime-benchmarks",
]
